# data_pipeline

./: .dockerignore  .env.exemple  .gitignore  .releaserc  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  env.example.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: docker-build.yml
src/: __init__.py  config.py  data_cleaner.py  database.py  download_data.py  import_to_duckdb.py  import_to_postgres.py  main.py  read_parquet.py
src/data/: download_data.py  read_parquet.py
src/fastapi-crud/: main.py  models.py  routes.py  schemas.py  services.py
