[project]
name = "data-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dlt[parquet]==0.4.12",
    "duckdb==0.10.0",
    "duckdb-engine==0.11.2",
    "fastapi>=0.119.0",
    "fastparquet==2024.2.0",
    "motor==3.3.2",
    "pandas==2.2.0",
    "psycopg2-binary==2.9.9",
    "pyarrow==15.0.0",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "pymongo==4.6.1",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "sqlalchemy==2.0.25",
    "uvicorn>=0.38.0",
]
